src/test/ui/lifetime_starts_expressions.stderr
error: expected identifier, found keyword `loop`
  --> $DIR/lifetime_starts_expressions.rs:6:26
   |
LL |     loop { break 'label: loop { break 'label 42; }; }
   |                          ^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     loop { break 'label: r#loop { break 'label 42; }; }
   |                          ^^^^^^

error: expected type, found keyword `loop`
  --> $DIR/lifetime_starts_expressions.rs:6:26
   |
LL |     loop { break 'label: loop { break 'label 42; }; }
   |                        - ^^^^ expected type
   |                        |
   |                        tried to parse a type due to this type ascription
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: for more information, see https://github.com/rust-lang/rust/issues/23416

error: aborting due to 2 previous errors

